Update NavigationThrottle::CancelDeferredNavigation() comment to specifically refer to the ThrottleCheckResult's action.

Bug: 762430
Change-Id: Ieaea62732d604ca56fb3cdb97e96a4ac98e76f15
Reviewed-on: https://chromium-review.googlesource.com/686102
Reviewed-by: Nasko Oskov <nasko@chromium.org>
Commit-Queue: Lucas Garron <lgarron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504803}
Former-commit-id: 123b6a15aabf3f38abc1c633383924d652bb433d